--- a/pom.xml
+++ b/pom.xml
@@ -508,7 +508,7 @@
                           <image>openjdk:8-jre-alpine</image>
                       </from>
                       <to>
-                          <image>nexus.citeck.ru/ecosapps:${jib.docker.image.tag}</image>
+                          <image>nexus.citeck.ru/ecos-apps:${jib.docker.image.tag}</image>
                       </to>
                       <container>
                           <entrypoint>
