--- a/pom.xml
+++ b/pom.xml
@@ -356,7 +356,14 @@
         <dependency>
             <groupId>ru.citeck.ecos.community</groupId>
             <artifactId>ecos-records</artifactId>
-            <version>1.1.0-SNAPSHOT</version>
+            <version>1.6.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.16.22</version>
+            <scope>provided</scope>
         </dependency>
 
     </dependencies>
