--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -126,7 +126,8 @@ spring:
     thymeleaf:
         mode: HTML
 
-server:
+
+    rabbitmq:server:
     servlet:
         session:
             cookie:
@@ -180,3 +181,8 @@ jhipster:
 # ===================================================================
 
 # application:
+
+spring.rabbitmq:
+    host: rabbitmq
+    username: admin
+    password: admin
