--- a/src/main/docker/postgresql.yml
+++ b/src/main/docker/postgresql.yml
@@ -1,11 +1,11 @@
 version: '2'
 services:
-    ecosapps-postgresql:
+    eapps-postgresql:
         image: postgres:10.4
         # volumes:
-        #     - ~/volumes/jhipster/ecosapps/postgresql/:/var/lib/postgresql/data/
+        #     - ~/volumes/jhipster/eapps/postgresql/:/var/lib/postgresql/data/
         environment:
-            - POSTGRES_USER=ecosapps
+            - POSTGRES_USER=eapps
             - POSTGRES_PASSWORD=
         ports:
             - 5432:5432
