--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -24,8 +24,8 @@ eureka:
         instance-info-replication-interval-seconds: 10
         registry-fetch-interval-seconds: 10
     instance:
-        appname: ecosapps
-        instanceId: ecosapps:${spring.application.instance-id:${random.value}}
+        appname: eapps
+        instanceId: eapps:${spring.application.instance-id:${random.value}}
         lease-renewal-interval-in-seconds: 5
         lease-expiration-duration-in-seconds: 10
         status-page-url-path: ${management.endpoints.web.base-path}/info
@@ -108,7 +108,7 @@ management:
 
 spring:
     application:
-        name: ecosapps
+        name: eapps
     jpa:
         open-in-view: false
         properties:
@@ -155,11 +155,11 @@ jhipster:
         #allow-credentials: true
         #max-age: 1800
     mail:
-        from: ecosapps@localhost
+        from: eapps@localhost
     swagger:
         default-include-pattern: /api/.*
-        title: ecosapps API
-        description: ecosapps API documentation
+        title: ECOS Apps API
+        description: ECOS Apps API documentation
         version: 0.0.1
         terms-of-service-url:
         contact-name:
