--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -17,17 +17,17 @@ eureka:
     client:
         enabled: false
     instance:
-        appname: ecosapps
-        instanceId: ecosapps:${spring.application.instance-id:${random.value}}
+        appname: eapps
+        instanceId: eapps:${spring.application.instance-id:${random.value}}
 
 spring:
     application:
-        name: ecosapps
+        name: eapps
     cache:
         type: simple
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:h2:mem:ecosapps;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+        url: jdbc:h2:mem:eapps;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
         name:
         username:
         password:
