--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -62,7 +62,8 @@ spring:
             enabled: false
     thymeleaf:
         mode: HTML
-
+    autoconfigure:
+        exclude: org.springframework.boot.autoconfigure.amqp.RabbitAutoConfiguration
 
 server:
     port: 10344
