--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>ru.citeck.ecos.apps</groupId>
     <artifactId>ecos-apps</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.2.0</version>
     <packaging>war</packaging>
     <name>EcosApps</name>
 
@@ -358,13 +358,13 @@
         <dependency>
             <groupId>ru.citeck.ecos.community</groupId>
             <artifactId>ecos-records</artifactId>
-            <version>1.6.0-SNAPSHOT</version>
+            <version>1.6.0</version>
         </dependency>
 
         <dependency>
             <groupId>ru.citeck.ecos.community</groupId>
             <artifactId>ecos-apps-lib</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
 
         <dependency>
