--- a/pom.xml
+++ b/pom.xml
@@ -357,8 +357,8 @@
 
         <dependency>
             <groupId>ru.citeck.ecos.community</groupId>
-            <artifactId>ecos-records</artifactId>
-            <version>1.6.0-SNAPSHOT</version>
+            <artifactId>ecos-records-spring</artifactId>
+            <version>1.8.0-SNAPSHOT</version>
         </dependency>
 <!--
         <dependency>
@@ -383,6 +383,12 @@
         <dependency>
             <groupId>org.springframework.amqp</groupId>
             <artifactId>spring-rabbit</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.3</version>
         </dependency>
 
     </dependencies>
