--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -179,6 +179,14 @@ jhipster:
 
 # application:
 
+ecos-apps:
+    ecos-app:
+        folder: ecos-app
+        id: ecos-apps
+        name: ECOS Applications
+        version: 1.3.0
+        dependencies: {}
+
 spring.rabbitmq:
     host: rabbitmq
     username: admin
