--- a/pom.xml
+++ b/pom.xml
@@ -391,6 +391,13 @@
             <version>1.9.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.github.fridujo</groupId>
+            <artifactId>rabbitmq-mock</artifactId>
+            <version>1.0.11</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
