--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>ru.citeck.ecos.apps</groupId>
     <artifactId>ecos-apps</artifactId>
-    <version>1.3.0-SNAPSHOT</version>
+    <version>1.3.0</version>
     <packaging>war</packaging>
     <name>EcosApps</name>
 
@@ -100,7 +100,8 @@
         <sonar.tests>${project.basedir}/src/test/</sonar.tests>
 
         <ecos.lombok.version>1.18.10</ecos.lombok.version>
-        <ecos.apps-lib.version>1.1.0-SNAPSHOT</ecos.apps-lib.version>
+        <ecos.records.version>1.9.0</ecos.records.version>
+        <ecos.apps-lib.version>1.1.0</ecos.apps-lib.version>
         <!-- jhipster-needle-maven-property -->
     </properties>
 
@@ -358,14 +359,8 @@
         <dependency>
             <groupId>ru.citeck.ecos.community</groupId>
             <artifactId>ecos-records-spring</artifactId>
-            <version>1.9.0-SNAPSHOT</version>
+            <version>${ecos.records.version}</version>
         </dependency>
-<!--
-        <dependency>
-            <groupId>ru.citeck.ecos.community</groupId>
-            <artifactId>ecos-apps-lib</artifactId>
-            <version>${ecos.apps-lib.version}</version>
-        </dependency>-->
 
         <dependency>
             <groupId>ru.citeck.ecos.community</groupId>
