--- a/pom.xml
+++ b/pom.xml
@@ -333,6 +333,10 @@
             <groupId>org.springframework.amqp</groupId>
             <artifactId>spring-rabbit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ru.citeck.ecos.community</groupId>
+            <artifactId>ecos-apps-lib-spring</artifactId>
+        </dependency>
 
     </dependencies>
 
