Add module patches support

--- a/src/main/resources/ecos-app/module/ui/journal/ecos-module-patches.yaml
+++ b/src/main/resources/ecos-app/module/ui/journal/ecos-module-patches.yaml
@@ -22,7 +22,7 @@ columns:
     label: { ru: Имя, en: Name }
 
   - name: target
-    label: { ru: Тип ECOS, en: ECOS Type }
+    label: { ru: Цель патча, en: Patch target }
 
   - name: order
     label: { ru: Порядок, en: Order }
