--- a/src/main/resources/ecos-app/module/ui/journal/ecos-module-patches.yaml
+++ b/src/main/resources/ecos-app/module/ui/journal/ecos-module-patches.yaml
@@ -7,6 +7,7 @@ sourceId: eapps/module-patch
 
 attributes:
   actionFormatter: '' #include include/legacy-actions.js
+  journalsListId: global-system
 
 actions:
   - uiserv/action@ecos-module-download
