--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
 
     <groupId>ru.citeck.ecos.apps</groupId>
     <artifactId>ecos-apps</artifactId>
-    <version>1.9.0-SNAPSHOT</version>
+    <version>1.9.0</version>
     <packaging>war</packaging>
     <name>EcosApps</name>
 
     <parent>
         <groupId>ru.citeck.ecos</groupId>
         <artifactId>ecos-micro-base</artifactId>
-        <version>2.4.0-SNAPSHOT</version>
+        <version>2.4.0</version>
     </parent>
 
     <repositories>
