--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
 
     <groupId>ru.citeck.ecos.apps</groupId>
     <artifactId>ecos-apps</artifactId>
-    <version>1.12.0</version>
+    <version>1.13.0-SNAPSHOT</version>
     <packaging>war</packaging>
     <name>EcosApps</name>
 
     <parent>
         <groupId>ru.citeck.ecos</groupId>
         <artifactId>ecos-micro-base</artifactId>
-        <version>2.12.0</version>
+        <version>3.0.1</version>
     </parent>
 
     <repositories>
@@ -347,6 +347,16 @@
         <dependency>
             <groupId>ru.citeck.ecos</groupId>
             <artifactId>ecos-apps-lib-spring</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>ru.citeck.ecos</groupId>
+            <artifactId>ecos-meta-repo-sql-spring</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>ru.citeck.ecos.rabbitmq</groupId>
+            <artifactId>ecos-rabbitmq-spring</artifactId>
         </dependency>
 
         <dependency>
