ECOSCOM-4124 - Add ECOS applications support

--- a/src/main/resources/ecos-app/module/model/type/ecos-module-patch.yaml
+++ b/src/main/resources/ecos-app/module/model/type/ecos-module-patch.yaml
@@ -7,7 +7,7 @@ name:
 
 system: true
 
-journal: uiserv/journal@ecos-module-patches
+journalRef: uiserv/journal@ecos-module-patches
 
 createVariants:
 
