--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <parent>
         <groupId>ru.citeck.ecos</groupId>
         <artifactId>ecos-micro-base</artifactId>
-        <version>2.12.0</version>
+        <version>2.14.2</version>
     </parent>
 
     <repositories>
@@ -335,11 +335,6 @@
         </dependency>
 
         <dependency>
-            <groupId>io.github.microutils</groupId>
-            <artifactId>kotlin-logging</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>ru.citeck.ecos</groupId>
             <artifactId>ecos-commands-spring</artifactId>
         </dependency>
@@ -347,6 +342,11 @@
         <dependency>
             <groupId>ru.citeck.ecos</groupId>
             <artifactId>ecos-apps-lib-spring</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>ru.citeck.ecos.rabbitmq</groupId>
+            <artifactId>ecos-rabbitmq-spring</artifactId>
         </dependency>
 
         <dependency>
