--- a/src/main/resources/config/application-dev_local.yml
+++ b/src/main/resources/config/application-dev_local.yml
@@ -7,17 +7,14 @@ alfresco:
     NIWSServerListClassName: com.netflix.loadbalancer.ConfigurationBasedServerList
 
 eapps:
-  ribbon:
-    listOfServers: localhost:8089
-    NIWSServerListClassName: com.netflix.loadbalancer.ConfigurationBasedServerList
+  watcher:
+    artifacts:
+      enabled: true
+      locations: './src/main/resources/eapps/artifacts'
 
 emodel:
   ribbon:
     listOfServers: localhost:8094
     NIWSServerListClassName: com.netflix.loadbalancer.ConfigurationBasedServerList
 
-eapps-watcher:
-  artifacts:
-    enabled: true
-    locations: './src/main/resources/eapps/artifacts'
 
