--- a/src/main/resources/eapps/artifacts/model/type/ecos-app.yaml
+++ b/src/main/resources/eapps/artifacts/model/type/ecos-app.yaml
@@ -13,10 +13,10 @@ journalRef: uiserv/journal@ecos-apps
 createVariants:
 
   - id: create
-    name: { ru: Создать приложение, en: Create application }
-    recordRef: eapps/ecos-app@
+    name: { ru: Создать приложение , en: Create application }
+    recordRef: eapps/ecosapp@
 
   - id: upload
     name: { ru: Загрузить приложение, en: Upload application }
-    recordRef: eapps/ecos-app@
+    recordRef: eapps/ecosapp@
     formRef: uiserv/eform@ecos-module-upload
