--- a/src/main/resources/eapps/artifacts/ui/journal/ecos-module-patches.yaml
+++ b/src/main/resources/eapps/artifacts/ui/journal/ecos-module-patches.yaml
@@ -2,6 +2,8 @@
 id: ecos-module-patches
 label: { ru: Патчи модулей, en: Module patches }
 
+system: true
+
 typeRef: emodel/type@ecos-module-patch
 sourceId: eapps/module-patch
 
