ECOSCOM-4124 - Add ECOS applications support

--- a/src/main/resources/eapps/artifacts/ui/journal/ecos-artifacts.yaml
+++ b/src/main/resources/eapps/artifacts/ui/journal/ecos-artifacts.yaml
@@ -1,6 +1,6 @@
 
 id: ecos-artifacts
-label: { ru: Артифакты ECOS, en: ECOS Artifacts }
+label: { ru: Артефакты ECOS, en: ECOS Artifacts }
 
 system: true
 
