ECOSCOM-4124 - Add ECOS applications support

--- a/src/main/resources/eapps/artifacts/ui/form/ecos_app_form.json
+++ b/src/main/resources/eapps/artifacts/ui/form/ecos_app_form.json
@@ -119,7 +119,7 @@
                     "label": "Artifacts",
                     "multiple": true,
                     "reorder": false,
-                    "journalId": "ecos-artifacts",
+                    "journalId": "ecos-app-artifacts",
                     "defaultValue": [],
                     "key": "artifacts",
                     "type": "selectJournal",
