ECOSCOM-4124 - Add ECOS applications support

--- a/src/main/resources/eapps/artifacts/ui/journal/ecos-artifacts.yaml
+++ b/src/main/resources/eapps/artifacts/ui/journal/ecos-artifacts.yaml
@@ -13,6 +13,7 @@ attributes:
 actions:
   - uiserv/action@ecos-module-download
   - uiserv/action@artifact-deploy
+  - uiserv/action@artifact-reset-user-rev
 
 columns:
 
