Add ability to download artifact history

--- a/src/main/resources/eapps/artifacts/ui/journal/ecos-artifacts.yaml
+++ b/src/main/resources/eapps/artifacts/ui/journal/ecos-artifacts.yaml
@@ -11,6 +11,7 @@ attributes:
   journalsListId: global-system
 
 actions:
+  - uiserv/action@artifact-download-revisions
   - uiserv/action@download-base64-data-zip
   - uiserv/action@artifact-deploy
   - uiserv/action@artifact-reset-user-rev
