--- a/src/main/resources/eapps/artifacts/ui/journal/ecos-app-types.yaml
+++ b/src/main/resources/eapps/artifacts/ui/journal/ecos-app-types.yaml
@@ -1,6 +1,6 @@
-
+---
 id: ecos-app-types
-label: { ru: Типы данных, en: Data types }
+name: { ru: Типы данных, en: Data types }
 
 system: true
 
@@ -11,14 +11,14 @@ predicate:
 
 columns:
 
-  - name: moduleId
+  - id: moduleId
     type: TEXT
-    label: { ru: Идентификатор, en: Id }
+    name: { ru: Идентификатор, en: Id }
 
-  - name: name
+  - id: name
     type: TEXT
-    label: { ru: Имя, en: Name }
+    name: { ru: Имя, en: Name }
 
-  - name: description
+  - id: description
     type: TEXT
-    label: { ru: Описание, en: Description }
+    name: { ru: Описание, en: Description }
