ECOSCOM-4006 - Migrate create-variants for ECOS 4

--- a/src/main/resources/eapps/artifacts/model/type/ecos-app.yaml
+++ b/src/main/resources/eapps/artifacts/model/type/ecos-app.yaml
@@ -12,6 +12,8 @@ sourceId: eapps/ecosapp
 formRef: uiserv/form@ecos-app-form
 journalRef: uiserv/journal@ecos-apps
 
+defaultCreateVariant: false
+
 createVariants:
 
   - id: create
