ECOSCOM-4006 - Migrate create-variants for ECOS 4

--- a/src/main/resources/eapps/artifacts/ui/journal/ecos-app-artifacts.yml
+++ b/src/main/resources/eapps/artifacts/ui/journal/ecos-app-artifacts.yml
@@ -3,6 +3,7 @@ id: ecos-app-artifacts
 name: { ru: Артефакты ECOS, en: ECOS Artifacts }
 
 system: true
+typeRef: emodel/type@ecos-artifact
 
 actions:
   - uiserv/action@ecos-module-download
