Fix artifact revisions downloading

--- a/src/main/resources/eapps/artifacts/ui/journal/ecos-module-patches.yml
+++ b/src/main/resources/eapps/artifacts/ui/journal/ecos-module-patches.yml
@@ -1,6 +1,6 @@
 ---
 id: ecos-module-patches
-name: { ru: Патчи артифактов, en: Artifacts patches }
+name: { ru: Патчи артефактов, en: Artifacts patches }
 
 system: true
 
