--- a/src/main/resources/config/application-dev_local.yml
+++ b/src/main/resources/config/application-dev_local.yml
@@ -17,4 +17,6 @@ emodel:
     listOfServers: localhost:8094
     NIWSServerListClassName: com.netflix.loadbalancer.ConfigurationBasedServerList
 
-
+ecos:
+  zookeeper:
+    host: localhost
