--- a/src/main/resources/eapps/artifacts/ui/admin-sections-group/application.json
+++ b/src/main/resources/eapps/artifacts/ui/admin-sections-group/application.json
@@ -30,6 +30,12 @@
       "config": {
         "journalId": "ecosConfig"
       }
+    },
+    {
+      "type": "JOURNAL",
+      "config": {
+        "journalId": "ecos-configs"
+      }
     }
   ]
 }
