ECOSENT-1994 - Blocking inactive accounts

--- a/src/main/resources/eapps/types/app/config/type.yml
+++ b/src/main/resources/eapps/types/app/config/type.yml
@@ -9,6 +9,6 @@ source-id: ""
 controller:
   type: json
   config:
-    idTemplate: ${scope!$appName{?str|presuf('app/','/')}}${id}
+    idTemplate: ${scope|presuf('','$')}${id}
     attsValues:
       scope: "${scope!$appName{?str|presuf('app/')}}"
