--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -24,8 +24,6 @@ eureka:
     instance-info-replication-interval-seconds: 10
     registry-fetch-interval-seconds: 10
   instance:
-    appname: eapps
-    instanceId: eapps:${spring.application.instance-id:${random.value}}
     lease-renewal-interval-in-seconds: 5
     lease-expiration-duration-in-seconds: 10
     status-page-url-path: ${management.endpoints.web.base-path}/info
@@ -37,29 +35,6 @@ eureka:
       git-version: ${git.commit.id.describe:}
       git-commit: ${git.commit.id.abbrev:}
       git-branch: ${git.branch:}
-ribbon:
-  eureka:
-    enabled: true
-feign:
-  hystrix:
-    enabled: true
-#    client:
-#        config:
-#            default:
-#                connectTimeout: 5000
-#                readTimeout: 5000
-
-# See https://github.com/Netflix/Hystrix/wiki/Configuration
-hystrix:
-  command:
-    default:
-      execution:
-        isolation:
-          strategy: SEMAPHORE
-  # See https://github.com/spring-cloud/spring-cloud-netflix/issues/1330
-  #                    thread:
-  #                        timeoutInMilliseconds: 10000
-  shareSecurityContext: true
 
 management:
   endpoints:
@@ -75,9 +50,6 @@ management:
   info:
     git:
       mode: full
-  health:
-    mail:
-      enabled: false # When using the MailService, configure an SMTP server and set this to true
   metrics:
     export:
       # Prometheus is the default metrics backend
@@ -109,6 +81,10 @@ management:
 spring:
   application:
     name: eapps
+  datasource:
+    url: jdbc:postgresql://localhost:5437/eapps
+    username: eapps
+    password:
   jpa:
     open-in-view: false
     properties:
@@ -134,39 +110,6 @@ spring:
 info:
   # Comma separated list of profiles that will trigger the ribbon to show
   display-ribbon-on-profiles: "dev"
-
-# ===================================================================
-# JHipster specific properties
-#
-# Full reference is available at: https://www.jhipster.tech/common-application-properties/
-# ===================================================================
-
-jhipster:
-  async:
-    core-pool-size: 2
-    max-pool-size: 50
-    queue-capacity: 10000
-    # By default CORS is disabled. Uncomment to enable.
-    #cors:
-    #allowed-origins: "*"
-    #allowed-methods: "*"
-    #allowed-headers: "*"
-    #exposed-headers: "Authorization,Link,X-Total-Count"
-    #allow-credentials: true
-    #max-age: 1800
-  mail:
-    from: eapps@localhost
-  swagger:
-    default-include-pattern: /api/.*
-    title: ECOS Apps API
-    description: ECOS Apps API documentation
-    version: 0.0.1
-    terms-of-service-url:
-    contact-name:
-    contact-url:
-    contact-email:
-    license:
-    license-url:
 
 # ===================================================================
 # Application specific properties
