--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -31,7 +31,7 @@ spring:
     serialization:
       indent-output: true
   jpa:
-    database-platform: io.github.jhipster.domain.util.FixedPostgreSQL82Dialect
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
     database: POSTGRESQL
     show-sql: false
     properties:
@@ -40,8 +40,6 @@ spring:
       hibernate.cache.use_second_level_cache: false
       hibernate.cache.use_query_cache: false
       hibernate.generate_statistics: true
-  liquibase:
-    contexts: dev
   messages:
     cache-duration: PT1S
   sleuth:
