ECOSUI-1751 - Add config-value Records DAO

--- a/src/main/resources/eapps/artifacts/model/type/ecos-config.yml
+++ b/src/main/resources/eapps/artifacts/model/type/ecos-config.yml
@@ -27,7 +27,7 @@ model:
       name:
         ru: Конфигурация типа значения
         en: Config type config
-      type: TEXT
+      type: JSON
     - id: version
       name:
         ru: Версия
