--- a/src/main/resources/eapps/artifacts/ui/journal/ecos-configs.yml
+++ b/src/main/resources/eapps/artifacts/ui/journal/ecos-configs.yml
@@ -7,12 +7,13 @@ system: true
 sourceId: eapps/config
 
 actions:
-  - uiserv/action@edit
+  - uiserv/action@config-value-edit
 
 editable: true
 
 columns:
 
+  - id: scope
   - id: configId
   - id: name
   - id: _value
